--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -1827,6 +1827,7 @@ $jsonResolver = new yswery\DNS\Resolver\JsonResolver([TEMP_RECORD_FILE]);
 <li>能在线运行 php 代码，能一次运行多个版本<ul>
 <li><a href="https://3v4l.org/">https://3v4l.org/</a></li>
 <li><a href="https://onlinephp.io/">https://onlinephp.io/</a></li>
+<li><a href="https://phphub.net/sandbox/">https://phphub.net/sandbox/</a></li>
 </ul>
 </li>
 <li>一个能生成 curl 命令的网站，在开发的时候十分有用，特别是测试第三方接口的时候
@@ -1839,6 +1840,7 @@ $jsonResolver = new yswery\DNS\Resolver\JsonResolver([TEMP_RECORD_FILE]);
 <li><a href="https://regexper.com/">https://regexper.com/</a></li>
 <li><a href="https://regex101.com/">https://regex101.com/</a></li>
 <li><a href="https://regexr.com/">https://regexr.com/</a></li>
+<li><a href="https://pythonium.net/regex">https://pythonium.net/regex</a></li>
 </ul>
 </li>
 <li>ASCII 画图
