--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8906 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8908 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=kexizeroing.github.io/URL-driven%20state%20in%20React.html>2024-09-28 URL-driven state in React</a></li>
+
+<li><a href=mabbs.github.io/%E7%94%A8CF%20Vectorize%E6%8A%8A%E5%8D%9A%E5%AE%A2%E4%BD%9C%E4%B8%BA%E8%81%8A%E5%A4%A9AI%E7%9A%84%E7%9F%A5%E8%AF%86%E5%BA%93.html>2024-09-27 用CF Vectorize把博客作为聊天AI的知识库</a></li>
 
 <li><a href=yuanj.top/Following.html>2024-09-24 Following</a></li>
 
