--- a/kexizeroing.github.io/CSS effects collection.html
+++ b/kexizeroing.github.io/CSS effects collection.html
@@ -23,6 +23,7 @@ tags: [css]</p>
 <li><a href="#rotating-highlight-effect">Rotating highlight effect</a></li>
 <li><a href="#glass-folder-effect">Glass folder effect</a></li>
 <li><a href="#the-periodic-table">The Periodic Table</a></li>
+<li><a href="#selection-menu">Selection menu</a></li>
 </ul>
 <h3>Rainbow Artword</h3>
 <p>&lt;img alt="Rainbow Artword" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008vxvgGly1h8t01qct5yj308q05ct8r.jpg" width="150"&gt;</p>
@@ -596,4 +597,31 @@ li {
 body:has(#alk:checked) li:not(.alk) { 
   opacity: 0.2;
 }
+</code></pre>
+<h3>Selection menu</h3>
+<p><a href="https://codepen.io/chriscoyier/pen/eYBQamQ">https://codepen.io/chriscoyier/pen/eYBQamQ</a></p>
+<pre><code class="lang-html">&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit...&lt;/p&gt;
+&lt;template&gt;&lt;span id="control"&gt;&lt;/span&gt;&lt;/template&gt;
+
+&lt;script&gt;
+  let control = document.importNode(document.querySelector('template').content, true).childNodes[0];
+  control.addEventListener('pointerdown', oncontroldown, false);
+
+  document.querySelector('p').onpointerup = () =&gt; {
+    let selection = document.getSelection(), text = selection.toString();
+    if (text !== "") {
+      let rect = selection.getRangeAt(0).getBoundingClientRect();
+      control.style.top = `calc(${rect.top}px - 48px)`;
+      control.style.left = `calc(${rect.left}px + calc(${rect.width}px / 2) - 40px)`;
+      document.body.appendChild(control);
+    }
+  }
+  document.onpointerdown = () =&gt; {  
+    let control = document.querySelector('#control');
+    if (control !== null) {
+      control.remove();
+      document.getSelection().removeAllRanges();
+    }
+  }
+&lt;/script&gt;
 </code></pre>
