--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -34,6 +34,8 @@ top: true</p>
 <p>A year-end celebration of fundamental web technologies: <a href="https://12daysofweb.dev">https://12daysofweb.dev</a></p>
 <p>B-trees and database indexes: <a href="https://planetscale.com/blog/btrees-and-database-indexes">https://planetscale.com/blog/btrees-and-database-indexes</a></p>
 <p>MySQL isolation levels and how they work: <a href="https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work">https://planetscale.com/blog/mysql-isolation-levels-and-how-they-work</a></p>
+<p>A Beginner’s Guide to the True Order of SQL Operations: <a href="https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations">https://blog.jooq.org/a-beginners-guide-to-the-true-order-of-sql-operations</a></p>
+<p>Falsehoods programmers believe in: <a href="https://github.com/kdeldycke/awesome-falsehood">https://github.com/kdeldycke/awesome-falsehood</a></p>
 <hr/>
 <h2>Tools and Cool websites</h2>
 <p>Chrome urls: <a href="chrome://chrome-urls/">chrome://chrome-urls</a></p>
@@ -86,6 +88,7 @@ top: true</p>
 <p>Awesome Web Apps that work without login: <a href="https://github.com/aviaryan/awesome-no-login-web-apps">https://github.com/aviaryan/awesome-no-login-web-apps</a></p>
 <p>A powerful media downloader with no bullshit: <a href="https://cobalt.tools">https://cobalt.tools</a></p>
 <p>A high-performance HTTP benchmarking tool written in Golang: <a href="https://github.com/six-ddc/plow">https://github.com/six-ddc/plow</a></p>
+<p>Netlify Celebrates 5 Million Developers | 3D Game: <a href="https://5-million-devs.netlify.com">https://5-million-devs.netlify.com</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: <a href="https://moderncss.dev">https://moderncss.dev</a></p>
@@ -162,6 +165,7 @@ top: true</p>
 <p>Drag and drop for any experience on any tech stack: <a href="https://github.com/atlassian/pragmatic-drag-and-drop">https://github.com/atlassian/pragmatic-drag-and-drop</a></p>
 <p>Leaflet extension for various free tile providers: <a href="https://github.com/leaflet-extras/leaflet-providers">https://github.com/leaflet-extras/leaflet-providers</a></p>
 <p>Modular data visualization framework: <a href="https://github.com/f5/unovis">https://github.com/f5/unovis</a></p>
+<p>Image comparison slider to compare images before and after: <a href="https://github.com/sneas/img-comparison-slider">https://github.com/sneas/img-comparison-slider</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -185,6 +189,7 @@ top: true</p>
 <p>Zero-dependency and lightweight React implementation: <a href="https://github.com/MarufZak/react-simplified">https://github.com/MarufZak/react-simplified</a></p>
 <p>Modern UI components to build your React app: <a href="https://dotui.org">https://dotui.org</a></p>
 <p>Type-safe search params state manager for Next.js: <a href="https://nuqs.47ng.com">https://nuqs.47ng.com</a></p>
+<p>React and the Vanishing Network: <a href="https://vanishing-network.epicreact.dev">https://vanishing-network.epicreact.dev</a></p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: <a href="https://blog.vuejs.org">https://blog.vuejs.org</a></p>
@@ -265,6 +270,7 @@ top: true</p>
 <p>Open source Claude Artifacts – built with Llama 3.1: <a href="https://llamacoder.together.ai">https://llamacoder.together.ai</a></p>
 <p>Find the best cursor rules for your framework and language: <a href="https://cursor.directory">https://cursor.directory</a></p>
 <p>Internal Knowledge Base Preview: <a href="https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base">https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base</a></p>
+<p>React Components for AI Chat: <a href="https://github.com/Yonom/assistant-ui">https://github.com/Yonom/assistant-ui</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
