--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -254,6 +254,22 @@ function render(vnode) {
 
   return el;
 }
+
+/**
+ * Parse a string of HTML or XML to a DOM tree.
+ * @param {string} [html] String containing HTML or XML to be parsed.
+ * @returns {DocumentFragment} Object containing Node structure of HTML/XML parsed.
+ */
+const parse = (html) =&gt; {
+  const element = document.createElement('template');
+  if (html !== undefined) {
+    element.innerHTML = html;
+  }
+  return element.content;
+};
+
+parse('Some &lt;em&gt;awesome&lt;/em&gt; markup &lt;img src="explosion.gif"&gt;');
+// returns DocumentFragment(4) [ #text, em, #text, img ]
 </code></pre>
 <ol>
 <li><p>Implement the functionality of <code>lodash.get</code>.
