--- a/kexizeroing.github.io/Run MySQL locally and some Node.js operations.html
+++ b/kexizeroing.github.io/Run MySQL locally and some Node.js operations.html
@@ -161,7 +161,8 @@ try {
 <h2>Memory Usage in Node.js (V8)</h2>
 <ul>
 <li>RSS (Resident Set Size): Total memory allocated for the Node.js process, including all parts of the memory: code, stack, and heap.</li>
-<li>Heap: Memory allocated for JavaScript objects.</li>
+<li>Heap Total: Memory allocated for JavaScript objects. This is the total size of the allocated heap.</li>
+<li>Heap Used: Memory actually used by the JavaScript objects. This shows how much of the heap is currently in use.</li>
 <li>External: Memory used by C++ objects that are linked to JavaScript objects. This memory is managed outside the V8 heap.</li>
 <li>Array Buffers: Memory allocated for ArrayBuffer objects, which are used to store fixed-length binary data.</li>
 </ul>
