--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -126,6 +126,14 @@ import("foo.json", { with: { type: "json" } })
 <h3>Import maps</h3>
 <p>In common module systems, such as CommonJS, or a module bundler like webpack, the import specifier was mapped to a specific file, and users only needed to apply the bare module specifier (usually the package name) in the import statement, and concerns around module resolution were taken care of automatically.</p>
 <p>Now many web developers are using JavaScript's native module syntax, but combining it with bare import specifiers, making their code unable to run on the web without per-application, ahead-of-time modification. We'd like to solve that, and bring these benefits to the web.</p>
+<p>When importing modules in scripts, if you don't use the <code>type=importmap</code> feature, then each module must be imported using a module specifier that is either an absolute or relative URL.</p>
+<pre><code class="lang-js">import { name as squareName, draw } from "./shapes/square.js";
+import { name as circleName } from "https://example.com/shapes/circle.js";
+
+// import from CDN, and no need for a build step
+// https://www.skypack.dev
+import React from 'https://cdn.skypack.dev/react'
+</code></pre>
 <p><a href="https://github.com/WICG/import-maps">This proposal</a> allows control over what URLs get fetched by JavaScript <code>import</code> statements. This allows "bare import specifiers", such as <code>import moment from "moment"</code>, to work. The mechanism for doing this is via an <em>import map</em> which can be used to control the resolution of module specifiers generally.</p>
 <p>Today, <code>import moment from "moment"</code> throws, as such bare specifiers are reserved <em>(specifier needs to start with the character <code>/</code>, <code>./</code>, <code>../</code>)</em>. By supplying the browser with the following import map, the above would act as if you had written <code>import moment from "/node_modules/moment/src/moment.js"</code>.</p>
 <pre><code class="lang-html">&lt;script type="importmap"&gt;
