--- a/www.zhaohuabing.com/超越 Gateway API：深入探索 Envoy Gateway 的扩展功能.html
+++ b/www.zhaohuabing.com/超越 Gateway API：深入探索 Envoy Gateway 的扩展功能.html
@@ -96,11 +96,14 @@ spec:
 <p>Envoy Gateway 提供了下面这些自定义资源：</p>
 <ul>
 <li>Policy Attachment：ClientTrafficPolicy、BackendTrafficPolicy、SecurityPolicy、EnvoyExtensionPolicy、EnvoyPatchPolicy。这些 Policy 可以关联到 API Gateway 的 Gateway、HTTPRoute 和 GRPCRoute 资源上，以实现对流量的自定义处理。</li>
+<li>HTTPRoute Filter：在 HTTPRoute 规则级别，支持 URL 重写、直接响应以及其他高级的请求和响应处理功能。</li>
 <li>自定义 Backend：Backend 可以用于 HTTPRoute 和 GRPCRoute 的规则中，将流量路由到自定义的后端服务。</li>
 </ul>
 <p>这些自定义资源和 Gateway API 的标准资源的关系如下图所示：</p>
 <p><img alt="" src="/img/2024-08-31-introducing-envoy-gateways-gateway-api-extensions/Envoy-Gateway-Resources.png"/></p>
-&lt;center&gt;Envoy Gateway 的资源&lt;/center&gt;<p>下面我们将详细介绍 Envoy Gateway 的 Gateway API 扩展功能，并深入探讨这些功能的应用场景。</p>
+&lt;center&gt;Envoy Gateway 的资源&lt;/center&gt;<blockquote><p>特别感谢 <a href="https://www.linkedin.com/in/ericahughberg">Erica Hughberg</a> 为本文绘制了上图。她还创作了许多其他有趣的作品，用简单直观的方式解释复杂的技术概念。关注她的 <a href="https://www.linkedin.com/in/ericahughberg">LinkedIn</a> 以查看更多她的作品。</p>
+</blockquote>
+<p>下面我们将详细介绍 Envoy Gateway 的 Gateway API 扩展功能，并深入探讨这些功能的应用场景。本文将重点介绍 Envoy Gateway 提供的自定义 Policy，因为 HTTPRoute Filter 和自定义 Backend 相对来说比较简单，容易理解。</p>
 <h2>Policy Attachment 扩展机制</h2>
 <p><a href="https://gateway-api.sigs.k8s.io/reference/policy-attachment/">Policy Attachment⁵</a> 是 Gateway API 提供的一个扩展机制，允许将一个 Policy 关联到 GatewayClass、Gateway、HTTPRoute、GRPCRoute 和 Service 等资源上，以实现对流量的自定义处理。Envoy Gateway 通过 Policy Attachment 机制实现了多种 Policy，用于在 Gateway 上提供 Envoy 强大的流量管理能力。</p>
 <p>同一个 Policy 可以关联到多个 Gateway API 的资源上。Envoy Gateway 对 Policy Attachment 的生效范围和优先级的规定如下：</p>
