--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -214,6 +214,10 @@ var arr = Array(3).fill({}) // [{}, {}, {}];
 arr[0].hi = "hi"; // [{ hi: "hi" }, { hi: "hi" }, { hi: "hi" }]
 
 [].fill.call({ length: 3 }, 4);  // {0: 4, 1: 4, 2: 4, length: 3}
+
+// compare with Array.from
+const array = Array.from({ length: 3 }, () =&gt; ({}));
+array[0].hi = "hi"; // [{ hi: "hi" }, {}, {}]
 </code></pre>
 <h3>Array.prototype.find()</h3>
 <pre><code class="lang-js">arr.find(callback(element[, index[, array]])[, thisArg])
