--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -1158,6 +1158,7 @@ apt install -y python3-pip
 -O 参数将服务器回应保存成文件，并将 URL 的最后部分当作文件名。
 如果服务器主动返回 失败 例如 reset 这类的，就会直接退出的了，不论有没有设置 --retry
 </code></pre>
+<p>curl 提供了一个脚本用于方便下载文件 <a href="https://github.com/curl/wcurl">https://github.com/curl/wcurl</a></p>
 <p>github 好像不支持断点下载</p>
 <h2>在 debian 新建命令的别名</h2>
 <ul>
