--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8908 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8911 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=mabbs.github.io/%E5%A6%82%E4%BD%95%E7%BB%99%E5%8D%9A%E5%AE%A2%E6%B7%BB%E5%8A%A0%E7%9B%B8%E4%BC%BC%E6%96%87%E7%AB%A0%E6%8E%A8%E8%8D%90%E5%8A%9F%E8%83%BD.html>2024-10-01 如何给博客添加相似文章推荐功能</a></li>
+
+<li><a href=kexizeroing.github.io/Type%20challenges%20solutions.html>2024-09-30 Type challenges solutions</a></li>
+
+<li><a href=informal.top/Weekly-%236%20Cost%20of%20PopTranslate.html>2024-09-29 Weekly-#6 Cost of PopTranslate</a></li>
 
 <li><a href=kexizeroing.github.io/URL-driven%20state%20in%20React.html>2024-09-28 URL-driven state in React</a></li>
 
