--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -166,6 +166,7 @@ top: true</p>
 <p>Leaflet extension for various free tile providers: <a href="https://github.com/leaflet-extras/leaflet-providers">https://github.com/leaflet-extras/leaflet-providers</a></p>
 <p>Modular data visualization framework: <a href="https://github.com/f5/unovis">https://github.com/f5/unovis</a></p>
 <p>Image comparison slider to compare images before and after: <a href="https://github.com/sneas/img-comparison-slider">https://github.com/sneas/img-comparison-slider</a></p>
+<p>CSS Custom Highlight API: <a href="https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API">https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -271,6 +272,7 @@ top: true</p>
 <p>Find the best cursor rules for your framework and language: <a href="https://cursor.directory">https://cursor.directory</a></p>
 <p>Internal Knowledge Base Preview: <a href="https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base">https://github.com/vercel-labs/ai-sdk-preview-internal-knowledge-base</a></p>
 <p>React Components for AI Chat: <a href="https://github.com/Yonom/assistant-ui">https://github.com/Yonom/assistant-ui</a></p>
+<p>Using LLMs to reverse minified Javascript: <a href="https://thejunkland.com/blog/using-llms-to-reverse-javascript-minification">https://thejunkland.com/blog/using-llms-to-reverse-javascript-minification</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
