--- a/kexizeroing.github.io/Inspirations.html
+++ b/kexizeroing.github.io/Inspirations.html
@@ -29,6 +29,7 @@ top: true</p>
 <li>@rauchg @steventey @leeerob at Vercel about DX</li>
 <li>@jlengstorf Learn With Jason <a href="https://www.learnwithjason.dev/episodes">https://www.learnwithjason.dev/episodes</a></li>
 <li>@asidorenko_ short videos about React/Next.js</li>
+<li>@simonw blog <a href="https://simonwillison.net">https://simonwillison.net</a></li>
 </ul>
 <h2>Learn from mistakes</h2>
 <ol>
