--- a/f2h2h1.github.io/在VSCode里调试PHP.html
+++ b/f2h2h1.github.io/在VSCode里调试PHP.html
@@ -120,6 +120,9 @@
 <li>这是点击，浏览器地址栏右边的 debug 图标就可以进行调试了</li>
 <li>然后在浏览器里访问对应的地址</li>
 <li>Xdebug Helper 实现的原理是， xdebug.idekey 的值会添加到 cookies 里（大概像这样 <code>XDEBUG_SESSION=vscode</code> ）， php 检测到 xdebug.idekey 后就会通知 IDE 启动调试</li>
+<li>可以直接通过浏览器的控制台加上这个 cookie<pre><code> document.cookie="XDEBUG_SESSION=vscode"
+</code></pre>
+</li>
 <li>用 postman 或 curl 这类工具测试时，只要 http 头的 cookie 带有 <code>XDEBUG_SESSION=vscode</code> ，就是触发调试的了，类似于这样<pre><code> curl -k --cookie "XDEBUG_SESSION=vscode" http://testurl
 </code></pre>
 </li>
