--- a/f2h2h1.github.io/在Windows下安装Magento2.html
+++ b/f2h2h1.github.io/在Windows下安装Magento2.html
@@ -80,6 +80,7 @@
   taskkill /T /F /FI "IMAGENAME eq nginx.exe"
 </code></pre>
 </li>
+<li>其实大部分经验在 linux 环境下也适用</li>
 </ul>
 <h2>安装 Magento2.3</h2>
 <ol>
@@ -743,5 +744,35 @@ php bin/magento setup:store-config:set --base-url="http://localhost-magento.com/
 查看所有模块
 php bin/magento module:status
 
+有空就把 2.3 的安装过程删掉，全部换成 2.4 的，2.3 也算过时了
+
+apache的配置
+2.4
+2.2 和 2.4 的配置会有一点不一样
+
+需要在默认设置的基础上加上这三个模块
+modules/mod_rewrite.so
+modules/mod_version.so
+php_module
+
+这是站点的配置
+&lt;VirtualHost *:80&gt;
+    ServerAdmin webmaster@dummy-host2.example.com
+    DocumentRoot "D:\magento-ce\pub"
+    ServerName localhost-magento.com
+
+    &lt;Directory /&gt;
+        Options FollowSymlinks
+        AllowOverride All
+        Require all granted
+    &lt;/Directory&gt;
+
+    &lt;IfModule dir_module&gt;
+        DirectoryIndex index.html index.php
+    &lt;/IfModule&gt;
+
+    ErrorLog "logs/localhost-magento.com-error.log"
+    CustomLog "logs/localhost-magento.com-access.log" common
+&lt;/VirtualHost&gt;
 
 --&gt;
