--- a/f2h2h1.github.io/观察网站性能.html
+++ b/f2h2h1.github.io/观察网站性能.html
@@ -135,6 +135,9 @@ n=100
 
 TEST_URL=www.baidu.com
 
+verbose="false"
+DRY_RUN="false"
+
 # echo $nproc
 # echo $c
 # echo $n
@@ -163,6 +166,10 @@ while [ -n "${1-}" ]; do
             n=${1}
             ;;
 
+        -v|--verbose)
+            verbose="true"
+            ;;
+
         --curl-options=*)
             opt=$(printf "%s\n" "${1}" | sed 's/^--curl-options=//')
             CURL_OPTIONS="${CURL_OPTIONS} ${opt}"
@@ -178,6 +185,7 @@ while [ -n "${1-}" ]; do
             ;;
 
         -h|--help)
+            print_version
             usage
             exit 0
             ;;
@@ -213,19 +221,77 @@ while [ -n "${1-}" ]; do
 done
 
 # n=5
+once="curl -o /dev/null -s -w %{http_code}::%{time_namelookup}::%{time_connect}::%{time_starttransfer}::%{time_total}::%{speed_download}, $TEST_URL ";
 
-b=$(for i in $(seq 1 $n); do echo "curl -o /dev/null -s -w %{http_code}::%{time_namelookup}::%{time_connect}::%{time_starttransfer}::%{time_total}::%{speed_download}; $TEST_URL ";echo ","; done)
+ConcurrencyCommand="for i in \$(seq 1 \$n); do echo \$once; echo \";\";done"
 
-echo "TEST_URL" $TEST_URL
-echo "TEST_COUTE" $n
-echo "Concurrency" $c
+t=$(echo $ConcurrencyCommand | sed 's/\$n/'$n'/' | sed 's/\$once/%s/');
+t2=$(echo $t" ;; "$once | awk '
+    BEGIN {
+        FS=";;";
+    }
+    {
+        printf($1, $2)
+        if (NR == 1) exit;
+    }
+    ')
+t3="echo \$($t2) | xargs -d \";\" -n 1 -P $c bash -c '\$0'"
 
-# echo $b;
-c=$(echo $b | xargs -d "," -n 1 -P $c bash -c '$0')
-# echo $c;
+printf "%-11s %s \n" "TEST_URL" $TEST_URL
+printf "%-11s %d \n" "TEST_COUTE" $n
+printf "%-11s %d \n" "Concurrency" $c
 
-# echo $c | sed 's/;/\n/g'
-echo $c | sed 's/;$//' | awk '
+if [ $DRY_RUN = "true" ]; then
+
+    echo
+    # 运行一次的命令
+    echo 'once'
+    echo $once | sed 's/,//g'
+
+    echo
+    # 完整的运行命令
+    echo 'Concurrency'
+    echo $t3 " | sed 's/,/\n/g'"
+    # echo "bash -c "$(echo $b | sed 's/;/\n/g' | head -n 1 | sed 's/,//g');
+    # echo "xargs -d \";\" -n 1 -P $c bash -c";
+    # echo $b;
+
+    exit 0
+fi
+
+c=$(eval $t3)
+
+# echo $c | sed 's/,/\n/g'
+# echo $c
+# printf "\n"
+
+# echo $c | sed 's/,/\n/g'
+# printf "\n"
+
+d=$(echo $c | sed 's/,$//')
+# echo "$d"
+# printf "\n"
+
+# echo $c | sed 's/;$//' | awk
+
+if [ $verbose = "true" ]; then
+    echo $d | awk '
+BEGIN {
+    RS=",";
+    FS="::";
+    printf("\n");
+    printf("%-6s %-9s  %-15s  %-12s  %-18s  %-10s  %-14s \n", " ", "http_code", "time_namelookup", "time_connect", "time_starttransfer", "time_total", "speed_download");
+}
+{
+    printf("%-6d %-9d  %-15.6f  %-12.6f  %-18.6f  %-10.6f  %-14d \n", NR, $1, $2, $3, $4, $5, $6);
+}
+END {
+    printf("\n");
+}
+'
+fi
+
+echo $d | awk '
 function median(arr, count1) {
     return (count1 % 2 == 0) ? ( arr[count1 / 2] + arr[count1 / 2 + 1] ) / 2  : arr[int(count1 / 2) + 1];
 }
@@ -241,7 +307,7 @@ function sdev(arr, count1) {
     return sqrt(variance);
 }
 BEGIN {
-    RS=";";
+    RS=",";
     FS="::";
 }
 {
@@ -275,8 +341,8 @@ END {
 '
 </code></pre>
 <p>这是上面那段脚本的运行结果 <code>./testwebsite.sh -c 2 -n 10 "https://www.baidu.com"</code></p>
-<pre><code>TEST_URL https://www.baidu.com
-TEST_COUTE 10
+<pre><code>TEST_URL    https://www.baidu.com
+TEST_COUTE  10
 Concurrency 2
                      total         mean          max           min           median        sdev
 time_namelookup      0.393789      0.003938      0.027595      0.003291      0.003560      0.002553     
@@ -290,11 +356,13 @@ speed_download       6362500       63625.000     83228         39461         634
 <li>测试 url 是 <a href="https://www.baidu.com">https://www.baidu.com</a></li>
 <li>一共请求 100 次</li>
 <li>至多同时运行两次请求</li>
-<li>输出各项数据的，总计，平均数，最大值，最小值，中位数，标准差</li>
+<li>输出各项数据的，总计（total），平均数（mean），最大值（max），最小值（min），中位数（median），标准差（sdev）</li>
 </ul>
 <p>这样的脚本也没有考虑到重定向的情况</p>
 &lt;!--
 后续把 ab 的那些输出项也加上去，允许加上其他curl参数，再加个调试模式
+
+a=20;echo $(for i in $(seq 1 $a); do echo "curl -o /dev/null -s -w %{http_code}::%{time_namelookup}::%{time_connect}::%{time_starttransfer}::%{time_total}::%{speed_download}; www.baidu.com ";echo ","; done) | xargs -d "," -n 1 -P 4 bash -c '$0' | sed 's/,/\n/g'
 --&gt;
 
 <h2>lighthouse</h2>
